add login/logout, forget/reset password
