# backend/api/user/user_controller.go
@@ -6,6 +6,7 @@ import (
 	"log"
 	"net/http"
 	"server/helper"
+	"time"
 
 	"github.com/julienschmidt/httprouter"
 )
@@ -38,15 +39,15 @@ func (c *UserController) CreateAccount(w http.ResponseWriter, r *http.Request, p
 		return
 	}
 
-	userId, err := c.UserService.CreateAccount(r.Context(), request.Email, request.Password)
+	err := c.UserService.CreateAccount(r.Context(), request.Email, request.Password)
 	if err != nil {
+		log.Println("Failed to create account:", err)
 		switch {
 		case errors.Is(err, helper.ErrEmailAlreadyExists):
 			http.Error(w, err.Error(), http.StatusConflict)
 		case errors.Is(err, helper.ErrFailedToSendVerificationEmail):
 			http.Error(w, err.Error(), http.StatusInternalServerError)
 		default:
-			log.Println("Failed to create account:", err)
 			http.Error(w, "Internal server error", http.StatusInternalServerError)
 		}
 		return
@@ -54,7 +55,6 @@ func (c *UserController) CreateAccount(w http.ResponseWriter, r *http.Request, p
 
 	response := map[string]string{
 		"message": "Registration successful! Please check your email to verify your account",
-		"id":      userId,
 	}
 
 	w.Header().Add("Content-Type", "application/json")
@@ -86,7 +86,12 @@ func (c *UserController) VerifyAccount(w http.ResponseWriter, r *http.Request, p
 
 	if err := c.UserService.VerifyAccount(r.Context(), request.Token); err != nil {
 		log.Println("Failed to verify account:", err)
-		http.Error(w, err.Error(), http.StatusInternalServerError)
+		switch {
+		case errors.Is(err, helper.ErrUserNotFound):
+			http.Error(w, err.Error(), http.StatusNotFound)
+		default:
+			http.Error(w, "Internal server error", http.StatusInternalServerError)
+		}
 		return
 	}
 
@@ -102,6 +107,14 @@ func (c *UserController) VerifyAccount(w http.ResponseWriter, r *http.Request, p
 	}
 }
 
+// @Summary Login
+// @Params request body LoginRequest true "Email and password"
+// @Success 200
+// @Failure 400
+// @Failure 401
+// @Failure 403
+// @Failure 500
+// @Router /api/auth/login [post]
 func (c *UserController) Login(w http.ResponseWriter, r *http.Request, params httprouter.Params) {
 	var request LoginRequest
 
@@ -109,5 +122,152 @@ func (c *UserController) Login(w http.ResponseWriter, r *http.Request, params ht
 		http.Error(w, "Invalid JSON payload", http.StatusBadRequest)
 		return
 	}
-	// TODO
+
+	if request.Email == "" || request.Password == "" {
+		http.Error(w, "Email and password are required", http.StatusBadRequest)
+		return
+	}
+
+	accessToken, err := c.UserService.Login(r.Context(), request.Email, request.Password)
+	if err != nil {
+		log.Println("Failed to login:", err)
+		switch {
+		case errors.Is(err, helper.ErrInvalidEmailOrPassword):
+			http.Error(w, err.Error(), http.StatusUnauthorized)
+		case errors.Is(err, helper.ErrUserNotVerified):
+			http.Error(w, err.Error(), http.StatusForbidden)
+		default:
+			http.Error(w, "Internal server error", http.StatusInternalServerError)
+		}
+		return
+	}
+
+	response := map[string]string{
+		"message": "Login successful",
+	}
+
+	w.Header().Add("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+
+	cookie := &http.Cookie{
+		Name:     "access_token",
+		Value:    accessToken,
+		Expires:  time.Now().Add(15 * time.Minute),
+		HttpOnly: true,
+		// Secure: true,						// TODO for HTTPS
+		SameSite: http.SameSiteLaxMode,
+	}
+
+	http.SetCookie(w, cookie)
+
+	if err := json.NewEncoder(w).Encode(response); err != nil {
+		log.Println("Failed to write response:", err)
+	}
+}
+
+// @Summary Logout
+// @Success 200
+// @Failure 500
+// @Router /api/auth/logout [post]
+func (c *UserController) Logout(w http.ResponseWriter, r *http.Request, params httprouter.Params) {
+	response := map[string]string{
+		"message": "Logged out",
+	}
+
+	w.Header().Add("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+
+	cookie := &http.Cookie{
+		Name:     "access_token",
+		MaxAge:   -1,
+		HttpOnly: true,
+		// Secure: true, 						// TODO for HTTPS
+		SameSite: http.SameSiteLaxMode,
+	}
+
+	http.SetCookie(w, cookie)
+
+	if err := json.NewEncoder(w).Encode(response); err != nil {
+		log.Println("Failed to write response:", err)
+	}
+}
+
+// @Summary	Forget password
+// @Param request body ForgetPasswordRequest true "Email"
+// @Success 200
+// @Failure 400
+// @Failure 500
+// @Router /api/auth/forget-password [post]
+func (c *UserController) ForgetPassword(w http.ResponseWriter, r *http.Request, params httprouter.Params) {
+	var request ForgetPasswordRequest
+
+	if err := json.NewDecoder(r.Body).Decode(&request); err != nil {
+		http.Error(w, "Invalid JSON payload", http.StatusBadRequest)
+		return
+	}
+
+	if request.Email == "" {
+		http.Error(w, "Email is required", http.StatusBadRequest)
+		return
+	}
+
+	if err := c.UserService.ForgetPassword(r.Context(), request.Email); err != nil {
+		log.Println("Failed to reset password:", err)
+		http.Error(w, "Internal server error", http.StatusInternalServerError)
+		return
+	}
+
+	response := map[string]string{
+		"message": "A password reset link has been sent",
+	}
+
+	w.Header().Add("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+
+	if err := json.NewEncoder(w).Encode(response); err != nil {
+		log.Println("Failed to write response:", err)
+	}
+}
+
+// @Summary	Reset password
+// @Param request body ResetPasswordRequest true "Token and password"
+// @Success 200
+// @Failure 400
+// @Failure 500
+// @Router /api/auth/reset-password [post]
+func (c *UserController) ResetPassword(w http.ResponseWriter, r *http.Request, params httprouter.Params) {
+	var request ResetPasswordRequest
+
+	if err := json.NewDecoder(r.Body).Decode(&request); err != nil {
+		http.Error(w, "Invalid JSON payload", http.StatusBadRequest)
+		return
+	}
+
+	if request.Token == "" || request.Password == "" {
+		http.Error(w, "Token and password are required", http.StatusBadRequest)
+		return
+	}
+
+	if err := c.UserService.ResetPassword(r.Context(), request.Token, request.Password); err != nil {
+		log.Println("Failed to reset password:", err)
+
+		switch {
+		case errors.Is(err, helper.ErrInvalidOrExpiredToken):
+			http.Error(w, err.Error(), http.StatusBadRequest)
+		default:
+			http.Error(w, "Internal server error", http.StatusInternalServerError)
+		}
+		return
+	}
+
+	response := map[string]string{
+		"message": "Password updated",
+	}
+
+	w.Header().Add("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+
+	if err := json.NewEncoder(w).Encode(response); err != nil {
+		log.Println("Failed to write response:", err)
+	}
 }
